syntax = "proto3";

import "google/protobuf/timestamp.proto";

package accountService;

option go_package = "./;accountService";

service accountService {
  rpc CreateAccount(CreateAccountReq) returns (CreateAccountRes);
  rpc GetAccountByName(GetAccountByNameReq) returns (GetAccountByNameRes);
}

message Account {
  string Id = 1;
  string Name = 2;
  google.protobuf.Timestamp CreatedAt = 3;
  google.protobuf.Timestamp UpdatedAt = 4;
}

message CreateAccountReq {
  string Name = 1;
}

message CreateAccountRes {
  string Name = 1;
}

message accountCheckRequest {
  string reference_id = 1;
  string id_card_number = 2;
}

message accountCheckResponse {
  string reference_id = 1;
  google.protobuf.Timestamp date_time = 2;
  int32 result_code = 3;
  string message = 4;
  optional string data = 5;
}

message GetAccountByNameReq {
  string Name = 1;
}

message GetAccountByNameRes {
  repeated Account Accounts = 1;
}

message SearchReq {
  string Search = 1;
  int64 page = 2;
  int64 size = 3;
}

message SearchRes {
  int64 TotalCount = 1;
  int64 TotalPages = 2;
  int64 Page = 3;
  int64 Size = 4;
  bool HasMore = 5;
  repeated Account Accounts = 6;
}
